--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
             <!-- Input element for username -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">face</i>
+                    <i class="material-icons prefix purple-text text-darken-3">face</i>
                     <input id="username" name="username" type="text" minlength="5" maxlength="15"
                         pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                     <label for="username">Username</label>
@@ -20,7 +20,7 @@
             <!-- Input element for password -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">lock</i>
+                    <i class="material-icons prefix purple-text text-darken-3">lock</i>
                     <input id="password" name="password" type="password" minlength="5" maxlength="15"
                         pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                     <label for="password">Password</label>
@@ -30,12 +30,12 @@
             <!-- Submit button for log in -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
                         Log In<i class="material-icons right">forward</i>
                     </button>
                     <div class="col s12 ">
                         <p>If you have not yet joined us you can <a href="{{ url_for('registration') }}"
-                                class="orange-text text-darken-4">Register Here</a></p>
+                                class="purple-text text-darken-4">Register Here</a></p>
 
                     </div>
 
