--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -11,7 +11,7 @@
 <!-- Input for adding a cateory name  -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">important_devices</i>
+                    <i class="material-icons prefix ">important_devices</i>
                     <input id="category_name" name="category_name" minlength="2" maxlength="100" type="text"
                         class="validate" placeholder="Name" required>
                     <label for="category_name">New Category's name</label>
@@ -22,11 +22,11 @@
 <!-- Submit button for adding a new category -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
                         Add this new category now! <i class="material-icons right">add_circle_outline</i>
                     </button>
  <!-- Button to cancel all changes and return to manage_categories -->
-                    <a href="{{ url_for('manage_categories') }}" class="btn-large waves-effect waves-light orange darken-3">
+                    <a href="{{ url_for('manage_categories') }}" class="btn-large waves-effect waves-light purple lighten-1">
                         Cancel <i class="material-icons right">close</i>
                     </a>
 
