--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -8,9 +8,9 @@
                         
                        
     <li>
-      <div class="collapsible-header"><i class="material-icons">list</i>{{ category.category_name }}</div>
-      <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Edit this category name</a>
-        <a href="{{ url_for('add_technology') }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Add a technology</a></span>
+      <div class="collapsible-header purple lighten-5"><i class="material-icons">list</i>{{ category.category_name }}</div>
+      <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons right">close</i>Edit this category name</a>
+        <a href="{{ url_for('add_technology') }}" class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons right">close</i>Add a technology</a></span>
       </div>
     </li>
   
@@ -20,7 +20,7 @@
 
   <div class="row">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_category') }}" class="btn-large waves-effect waves-light orange darken-3">
+        <a href="{{ url_for('add_category') }}" class="btn-large waves-effect waves-light purple lighten-1">
             Add a new category to Technostalgia<i class="material-icons right">add_circle_outline</i>
         </a>
         
