--- a/templates/registration.html
+++ b/templates/registration.html
@@ -10,7 +10,7 @@
             <!-- Input element for first name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">person_add</i>
+                    <i class="material-icons prefix purple-text text-darken-3">person_add</i>
                     <input id="first_name" name="first_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate"
                         placeholder="First Name,  4-20 letters only" required>
                     <label for="first_name">First name</label>
@@ -20,7 +20,7 @@
             <!-- Input element for last name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">person_add</i>
+                    <i class="material-icons prefix purple-text text-darken-3">person_add</i>
                     <input id="last_name" name="last_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate"
                         placeholder="Last Name, 4-20 letters only" required>
                     <label for="last_name">Last name</label>
@@ -30,7 +30,7 @@
             <!-- Input element for email address -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">mail</i>
+                    <i class="material-icons prefix purple-text text-darken-3">mail</i>
                     <input id="email" name="email" type="email" class="validate" placeholder="Email address" required>
                     <label for="email">Email</label>
                 </div>
@@ -39,7 +39,7 @@
             <!-- Input element for username -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">face</i>
+                    <i class="material-icons prefix purple-text text-darken-3">face</i>
                     <input id="username" name="username" type="text" pattern="^[a-zA-Z0-9]{4,20}$" class="validate"
                         placeholder="username, 4-20 alphanumeric characters allowed" required>
                     <label for="username">Username</label>
@@ -49,7 +49,7 @@
             <!-- Input element for password -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">lock</i>
+                    <i class="material-icons prefix purple-text text-darken-3">lock</i>
                     <input id="password" name="password" type="password" minlength="5" maxlength="15"
                         pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                     <label for="password">Password</label>
@@ -59,7 +59,7 @@
             <!-- Input element to confirm password -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">lock</i>
+                    <i class="material-icons prefix purple-text text-darken-3">lock</i>
                     <input id="confirm_password" name="confirm_password" type="password" minlength="5" maxlength="15"
                         pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                     <label for="confirm_password">Confirm Password</label>
@@ -69,11 +69,11 @@
             <!-- Submit button for registration -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
                         Register<i class="material-icons right">forward</i>
                     </button>
                     <p>If you have already joined us you can <a href="{{ url_for('login') }}"
-                        class="orange-text text-darken-4">Log in Here</a></p>
+                        class="purple-text text-darken-4">Log in Here</a></p>
 
                 </div>
             </div>
