Move styling of card panels to from html to css

--- a/templates/edit_technology.html
+++ b/templates/edit_technology.html
@@ -80,12 +80,12 @@
             <!-- Submit button for adding a technology -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1"">
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
                         Edit this technology now! <i class="material-icons right">edit</i>
                     </button>
                     <!-- Button to cancel all changes and return to technologies -->
                     <a href="{{ url_for('get_technologies') }}"
-                        class="btn-large waves-effect waves-light purple lighten-1"">
+                        class="btn-large waves-effect waves-light purple lighten-1">
                         Cancel Changes <i class="material-icons right">close</i>
                     </a>
 
