--- a/templates/individual_technology.html
+++ b/templates/individual_technology.html
@@ -98,7 +98,7 @@
         <h3 class="heading">Add a comment about {{ technology.technology_name }}</h3>
       </div>
     </div>
-    <div class="row card-panel yellow lighten-5 ">
+    <div class="row card-panel">
       <form class="col s12 m8 " method="POST" action="{{ url_for('add_comment') }}">
         
           <div class="row">
@@ -118,7 +118,7 @@
           </div>
      
         <!--Reset Button-->
-        <div class="row card-action">
+        <div class="row card-action center-align">
           <div class="col s6">
             <button type="reset" class="btn-large waves-effect waves-light purple lighten-1" >
               <i
