--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,10 @@ body {
     line-height: 1.5;
 }
 
+.card-panel, .card-content, .card-action {
+    background-color:#f3e5f5;
+}
+
 
 /*-- Backgorund colour of sidenav to match site --*/
 
