--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -6,7 +6,7 @@
 <!-- Code for form from Materialize.com -->
 <div class="row">
     <form class="col s12" method="POST" action="{{ url_for('add_technology') }}">
-        <div class="card-panel purple lighten-5">
+        <div class="card-panel">
 
             <!-- Input for adding a technology's name  -->
             <div class="row">
