--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col s12 m8 offset-m2">
-        <div class="card-panel purple lighten-5">
+        <div class="card-panel">
             <h3 class="center-align">
                 {{ username|capitalize }}'s Profile
             </h3>
@@ -12,7 +12,7 @@
 </div>
 
 <div class="row">
-    <div class="col s6">
+    <div class="col s12 m6">
         {% if technologies|length > 0 %}
         <h4 class="heading center-align">Technologies you've added</h4>
         {% for technology in technologies %}
@@ -43,13 +43,13 @@
         </div>
         <!--  Delete technology modal -->
         <div id="modal{{ technology._id }}" class="modal">
-            <div class="modal-content">
+            <div class="modal-content purple lighten-5">
                 <h4>Are you sure you want to delete this item?</h4>
                 <p>The entire entry and all its comments will be deleted and you will not be able to retrieve
                     them
                 </p>
             </div>
-            <div class="modal-footer center-align">
+            <div class="modal-footer center-align purple lighten-5">
                 <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
                     class="modal-close waves-effect waves-light btn-small purple lighten-1 aligh-right">Yes I am
                     certain
@@ -65,18 +65,20 @@
 
         {% endfor %}
         {% else %}
-        <h4>You haven't added any technologies yet</h4>
-        <a href="{{ url_for('add_technology') }}" class="waves-effect waves-light btn-small purple lighten-1 aligh-right"><i
+        <div class="center-align">
+        <h4 >You haven't added any technologies yet</h4>
+        <a href="{{ url_for('add_technology') }}" class="waves-effect waves-light btn-small purple lighten-1"><i
             class="material-icons right">add_circle_outline</i>Add one now</a>
+        </div>
         {% endif %}
     </div>
 
-    <div class="col s6">
+    <div class="col s12 m6">
         {% if comments|length > 0 %}
         <h4 class="heading center-align">Comments you've added</h4>
         {% for comment in comments %}
-        <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
+        <div class="card">
+            <div class="card-content">
                 <span class="card-title"><strong>Category: {{ comment.technology_name }}</strong></span>
                 <p>
                     <ul>
@@ -99,7 +101,7 @@
         </div>
 <!--  Delete technology modal -->
 <div id="modal{{ comment._id }}" class="modal">
-    <div class="modal-content">
+    <div class="modal-content purple lighten-5">
         <h4>Are you sure you want to delete this comment?</h4>
         <p>It will not be permanenetly deleted and you will not be able to retrieve it</p>
     </div>
@@ -120,9 +122,11 @@
         {% endfor %}
     </div>
     {% else %}
+    <div class="center-align">
     <h4>You haven't added any comments yet</h4>
     
     <a href="{{ url_for('get_technologies') }}" class="waves-effect waves-light btn-small purple lighten-1 aligh-right"><i
         class="material-icons right">edit</i>Pick a technology to comment on</a>
+    </div>
     {% endif %}
     {% endblock %}
