--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -9,7 +9,7 @@
 </div>
 
 <!-- Code for search box  -->
-<div class="row card-panel purple lighten-5">
+<div class="row card-panel">
   <form action="{{ url_for('search') }}" method="post" class="col s12">
     <div class="row valign-wrapper center-align">
       <div class="input-field col s12">
@@ -71,7 +71,7 @@
       </div>
       <div class="card-action">
         
-        <a href="{{ url_for('individual_technology', technology_id=technology._id) }}">See all the comments about {{ technology.technology_name}}s</a>
+        <a href="{{ url_for('individual_technology', technology_id=technology._id) }}" class="purple-text text-darken-4">See all the comments about {{ technology.technology_name}}s</a>
         <br>
         {% if session.user|lower == technology.posted_by|lower %}
         
