--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,10 @@ body {
     background-color:#f3e5f5;
 }
 
+.btn-large {
+    background-color: #ab47bc ;
+}
+
 
 /*-- Backgorund colour of sidenav to match site --*/
 
