--- a/templates/base.html
+++ b/templates/base.html
@@ -66,8 +66,8 @@
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         {% for message in messages %}
-        <div class="row flashes">
-            <h4 class="purple lighten-1" center-align">{{ message }}</h4>
+        <div class="row flashes ">
+            <h4 class="purple lighten-1 center-align">{{ message }}</h4>
         </div>
         {% endfor %}
         {% endif %}
