Standardize colours across the app

--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -22,11 +22,11 @@
 <!-- Submit button for adding a new category -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light">
+                    <button type="submit" class="btn-large waves-effect waves-light purple darken-3">
                         Add this new category now! <i class="material-icons right">add_circle_outline</i>
                     </button>
  <!-- Button to cancel all changes and return to manage_categories -->
-                    <a href="{{ url_for('manage_categories') }}" class="btn-large waves-effect waves-light">
+                    <a href="{{ url_for('manage_categories') }}" class="btn-large waves-effect waves-light purple darken-3">
                         Cancel <i class="material-icons right">close</i>
                     </a>
 
