--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
             <!-- Submit button for log in -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light">
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
                         Log In<i class="material-icons right">forward</i>
                     </button>
                     <div class="col s12 ">
