--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -78,11 +78,11 @@
             <!-- Submit button for adding a technology -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light purple darken-3">
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
                         Add this technology now! <i class="material-icons right">add_circle_outline</i>
                     </button>
                     <!-- Button to cancel all changes and return to technologies -->
-                    <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple darken-3">
+                    <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1">
                         Cancel <i class="material-icons right">close</i></a>
                 </div>
             </div>
