--- a/templates/individual_technology.html
+++ b/templates/individual_technology.html
@@ -19,7 +19,8 @@
             <li>Best bits: {{ technology.best_bits }}</li>
             <li>Worst bits: {{ technology.worst_bits }}</li>
             <li>Added by: {{ technology.added_by }}</li>
-            <li>Date posted: {{ technology.added_on }}</li>
+            <li>Date added: {{ technology.added_on  }}</li>
+           
           </ul>
   
         </div>
@@ -30,7 +31,7 @@
           {% if session.user|lower == technology.posted_by|lower %}
           
           <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
-            class="waves-effect waves-light btn-small purple lighten-1 aligh-right"><i
+            class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
               class="material-icons right">edit</i>Edit this technology</a>
           <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
             href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete this technology</a>
@@ -48,11 +49,11 @@
     </div>
     <div class="modal-footer center-align">
       <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-        class="modal-close waves-effect waves-light btn-small purple lighten-1 aligh-right">Yes I am certain I want to
+        class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to
         delete this</a>
   
       <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
-        class="modal-close waves-effect waves-light btn-small purple lighten-1 aligh-right">No, return to safety</a>
+        class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to safety</a>
   
     </div>
   </div>
