--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,21 +23,20 @@
             <div class="card-stacked">
                 <div class="card-content">
                     <ul>
-                        <li><strong>Category: {{ technology.category_name }}</strong></li>
-                        <li>Name: {{ technology.technology_name }}</li>
-                        <li>Added by you on : {{ technology.added_on }}</li>
+                        <li><b>Category:</b>{{ technology.category_name }}</li>
+                        <li><b>Name:</b> {{ technology.technology_name }}</li>
+                        <li><b>Added by you on :</b> {{ technology.added_on }}</li>
                         
                     </ul>
                 </div>
                 <div class="card-action">
 
                     <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
-                        class="waves-effect waves-light btn-small purple lighten-1 aligh-right"><i
+                        class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
                             class="material-icons right">edit</i>Edit this technology</a>
                     <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
                         href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete
-                        this
-                        technology</a>
+                        this technology</a>
                 </div>
             </div>
         </div>
@@ -51,13 +50,13 @@
             </div>
             <div class="modal-footer center-align purple lighten-5">
                 <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-                    class="modal-close waves-effect waves-light btn-small purple lighten-1 aligh-right">Yes I am
+                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am
                     certain
                     I
                     want to
                     delete this</a>
                 <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
-                    class="modal-close waves-effect waves-light btn-small purple lighten-1 aligh-right">No,
+                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No,
                     return to
                     safety</a>
             </div>
@@ -79,19 +78,18 @@
         {% for comment in comments %}
         <div class="card">
             <div class="card-content">
-                <span class="card-title"><strong>Category: {{ comment.technology_name }}</strong></span>
                 <p>
                     <ul>
-
-                        <li>Your comment: {{ comment.technology_comment }}</li>
+                        <li><b>Category:</b> {{ comment.technology_name }}</li>
+                        <li><b>Your comment:</b> {{ comment.technology_comment }}</li>
                         
-                        <li>Added by you on: {{ comment.created_on }}</li>
+                        <li><b>Added by you on:</b> {{ comment.created_on }}</li>
                     </ul>
                 </p>
             </div>
-            <div class="card-action">
+            <div class="card-action purple lighten-5">
                 <a href="{{ url_for('edit_comment', comment_id=comment._id) }}"
-                        class="waves-effect waves-light btn-small purple lighten-1 aligh-right"><i
+                        class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
                             class="material-icons right">edit</i>Edit this comment</a>
                     <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
                         href="#modal{{ comment._id }}"><i class="material-icons right">close</i>Delete
@@ -107,13 +105,13 @@
     </div>
     <div class="modal-footer center-align">
         <a href="{{ url_for('delete_comment', comment_id=comment._id) }}"
-            class="modal-close waves-effect waves-light btn-small purple lighten-1 aligh-right">Yes I am
+            class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am
             certain
             I
             want to
             delete this comment</a>
         <a href="{{ url_for('profile', username=session['user']) }}"
-            class="modal-close waves-effect waves-light btn-small purple lighten-1 aligh-right">No,
+            class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No,
             return to
             safety</a>
     </div>
@@ -125,7 +123,7 @@
     <div class="center-align">
     <h4>You haven't added any comments yet</h4>
     
-    <a href="{{ url_for('get_technologies') }}" class="waves-effect waves-light btn-small purple lighten-1 aligh-right"><i
+    <a href="{{ url_for('get_technologies') }}" class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
         class="material-icons right">edit</i>Pick a technology to comment on</a>
     </div>
     {% endif %}
