--- a/templates/registration.html
+++ b/templates/registration.html
@@ -69,7 +69,7 @@
             <!-- Submit button for registration -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light">
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
                         Register<i class="material-icons right">forward</i>
                     </button>
                     <p>If you have already joined us you can <a href="{{ url_for('login') }}"
