--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -8,13 +8,13 @@
     <form class="col s12" method="POST" action="{{ url_for('edit_category', category_id=category._id) }}">
         <div class="card-panel">
 
-<!-- Input for adding a cateory name  -->
+<!-- Input for adding a category name  -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix purple-text text-darken-3">important_devices</i>
                     <input id="category_name" name="category_name" minlength="2" maxlength="100" type="text"
                         class="validate" value ="{{ category.category_name }}" placeholder="Name" required>
-                    <label for="category_name">New Category's name</label>
+                    <label for="category_name">Category to edit</label>
                 </div>
             </div>
 
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="center-align col s6 offset-s3">
                     <button type="submit" class="btn-large waves-effect waves-light purple lighten-1"">
-                        Edit this category now! <i class="material-icons right">create</i>
+                        Edit this category's name now! <i class="material-icons right">create</i>
                     </button>
 <!-- Link as button to cancel and return to manage_categories -->
                     <a href="{{ url_for('manage_categories') }}" class="btn-large waves-effect waves-light purple lighten-1"">
