--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -2,7 +2,13 @@
 {% block content %}
 
 <h1 class="center-align">{{ page_title }}</h1>
-<h4 class="center-align">Click any category to edit it</h4>
+<h4 class="center-align">Manage categories</h4>
+
+
+
+
+
+
 <ul class="collapsible">
   {% for category in categories %}
                         
