--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="center-align">{{ page_title }}</h1>
+<h4 class="center-align">Add a technology</h4>
 
 <!-- Code for form from Materialize.com -->
 <div class="row">
