--- a/templates/comments.html
+++ b/templates/comments.html
@@ -6,7 +6,7 @@
 <!-- Card containing technology details -->
 
 <div class="col s12 m7">
-    <div class="card horizontal medium hoverable">
+    <div class="card horizontal small hoverable">
       <div class="card-image">
         <img src="{{ technology.technology_image }}" alt="">
       </div>
@@ -26,7 +26,7 @@
         </div>
         <div class="card-action">
           
-          <a href="{{ url_for('individual_technology', technology_id=technology._id) }}">Go to the comments about {{ technology.technology_name}}</a>
+          <a href="{{ url_for('comments', technology_id=technology._id) }}">Go to the comments about {{ technology.technology_name}}</a>
           <br>
           {% if session.user|lower == technology.posted_by|lower %}
           
@@ -58,6 +58,51 @@
     </div>
   </div>
 
+
+  
+  <div class="row">
+    <div class="col s12 center-align">
+      <h3 class="heading">Add a comment about {{ technology.technology_name }}</h3>
+    </div>
+  </div>
+  <div class="row card-panel">
+    <form class="col s12 m8 " method="POST" action="{{ url_for('add_comment') }}">
+      
+        <div class="row">
+          <div class="input-field col s12">
+            <label for="technology_name">Technology</label>
+            <input id="technology_name" type="text" name="technology_name" value="{{ technology.technology_name }}">
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <i class="material-icons prefix purple-text text-darken-3">comment</i>
+             
+              <label for="technology_comment">Your comments</label>
+              <textarea id="technology_comment" name="technology_comment" minlength="10" maxlength="200"
+                class="materialize-textarea validate" required></textarea>
+            </div>
+          </div>
+        </div>
+   
+      <!--Reset Button-->
+      <div class="row card-action center-align">
+        <div class="col s6">
+          <!--Submit Button-->
+          <button type="submit" class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons prefix">forward</i>Submit</button>
+        </div>
+        <div class="col s6">
+          <button type="reset" class="btn-large waves-effect waves-light purple lighten-1" >
+            <i
+            class="material-icons prefix">refresh</i>Clear
+          </button>
+        </div>
+        
+      </div>
+    </form>
+  </div>
+</section>
+
+  
 
 
 <!-- Comments section-->
@@ -92,56 +137,16 @@
     </div>
     
     {% endfor %}
-  
-  
-    <div class="row">
-      <div class="col s12 center-align">
-        <h3 class="heading">Add a comment about {{ technology.technology_name }}</h3>
-      </div>
-    </div>
-    <div class="row card-panel">
-      <form class="col s12 m8 " method="POST" action="{{ url_for('add_comment') }}">
-        
-          <div class="row">
-            <div class="input-field col s12">
-              <label for="technology_name">Technology</label>
-              <input id="technology_name" type="text" name="technology_name" value="{{ technology.technology_name }}">
-            </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <i class="material-icons prefix purple-text text-darken-3">comment</i>
-               
-                <label for="technology_comment">Your comments</label>
-                <textarea id="technology_comment" name="technology_comment" minlength="10" maxlength="200"
-                  class="materialize-textarea validate" required></textarea>
-              </div>
-            </div>
-          </div>
-     
-        <!--Reset Button-->
-        <div class="row card-action center-align">
-          <div class="col s6">
-            <button type="reset" class="btn-large waves-effect waves-light purple lighten-1" >
-              <i
-              class="material-icons prefix">refresh</i>Clear
-            </button>
-          </div>
-          <div class="col s6">
-            <!--Submit Button-->
-            <button type="submit" class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons prefix">forward</i>Submit</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </section>
-  
+
     
-    <!--Back to technologies page-->
-    <div class="row">
-      <div class="col s12 center-align">
-        <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1">Go back and browse all the technologies</a>
-      </div>
+  <!--Back to technologies page-->
+  <div class="row">
+    <div class="col s12 center-align">
+      <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1">Go back and browse all the technologies</a>
     </div>
+  </div>
+  
+  
   </section>
   
 
