--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,25 +11,23 @@
     </div>
 </div>
 
+<!-- List the technologies added by this user-->
 <div class="row">
     <div class="col s12 m6">
         {% if technologies|length > 0 %}
         <h4 class="heading center-align">Your technologies</h4>
         {% for technology in technologies %}
-        <div class="card horizontal small hoverable">
-            <div class="card-image">
-                <img src="{{ technology.technology_image }}" alt="">
-            </div>
+        <div class="card horizontal">
             <div class="card-stacked">
                 <div class="card-content">
                     <ul>
                         <li><b>Category:</b>{{ technology.category_name }}</li>
                         <li><b>Name:</b> {{ technology.technology_name }}</li>
                         <li><b>Added by you on :</b> {{ technology.added_on }}</li>
-                        
+
                     </ul>
                 </div>
-                <div class="card-action">
+                <div class="card-action purple lighten-5">
 
                     <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
                         class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
@@ -65,9 +63,9 @@
         {% endfor %}
         {% else %}
         <div class="center-align">
-        <h4 >You haven't added any technologies yet</h4>
-        <a href="{{ url_for('add_technology') }}" class="waves-effect waves-light btn-small purple lighten-1"><i
-            class="material-icons right">add_circle_outline</i>Add one now</a>
+            <h4>You haven't added any technologies yet</h4>
+            <a href="{{ url_for('add_technology') }}" class="waves-effect waves-light btn-small purple lighten-1"><i
+                    class="material-icons right">add_circle_outline</i>Add one now</a>
         </div>
         {% endif %}
     </div>
@@ -76,55 +74,59 @@
         {% if comments|length > 0 %}
         <h4 class="heading center-align">Your comments</h4>
         {% for comment in comments %}
-        <div class="card">
+        <div class="card horizontal">
+            <div class="card-stacked">
             <div class="card-content">
-                <p>
+            
                     <ul>
                         <li><b>Category:</b> {{ comment.technology_name }}</li>
                         <li><b>Your comment:</b> {{ comment.technology_comment }}</li>
                         <li><b>Added by you on:</b> {{ comment.created_on }}</li>
-                    
+
                     </ul>
-                </p>
+                
             </div>
             <div class="card-action purple lighten-5">
                 <a href="{{ url_for('edit_comment', comment_id=comment._id) }}"
-                        class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
-                            class="material-icons right">edit</i>Edit this comment</a>
-                    <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
-                        href="#modal{{ comment._id }}"><i class="material-icons right">close</i>Delete
-                        this
-                        comment</a>
+                    class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
+                        class="material-icons right">edit</i>Edit this comment</a>
+                <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
+                    href="#modal{{ comment._id }}"><i class="material-icons right">close</i>Delete
+                    this
+                    comment</a>
             </div>
         </div>
-<!--  Delete technology modal -->
-<div id="modal{{ comment._id }}" class="modal">
-    <div class="modal-content purple lighten-5">
-        <h4>Are you sure you want to delete this comment?</h4>
-        <p>It will not be permanenetly deleted and you will not be able to retrieve it</p>
-    </div>
-    <div class="modal-footer center-align">
-        <a href="{{ url_for('delete_comment', comment_id=comment._id) }}"
-            class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am
-            certain
-            I
-            want to
-            delete this comment</a>
-        <a href="{{ url_for('profile', username=session['user']) }}"
-            class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No,
-            return to
-            safety</a>
-    </div>
-</div>
+        </div>
+        <!--  Delete comment modal -->
+        <div id="modal{{ comment._id }}" class="modal">
+            <div class="modal-content purple lighten-5">
+                <h4>Are you sure you want to delete this comment?</h4>
+                <p>It will not be permanenetly deleted and you will not be able to retrieve it</p>
+            </div>
+            <div class="modal-footer center-align">
+                <a href="{{ url_for('delete_comment', comment_id=comment._id) }}"
+                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am
+                    certain
+                    I
+                    want to
+                    delete this comment</a>
+                <a href="{{ url_for('profile', username=session['user']) }}"
+                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No,
+                    return to
+                    safety</a>
+            </div>
+        </div>
 
         {% endfor %}
     </div>
     {% else %}
     <div class="center-align">
-    <h4>You haven't added any comments yet</h4>
-    
-    <a href="{{ url_for('get_technologies') }}" class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
-        class="material-icons right">edit</i>Pick a technology to comment on</a>
+        <h4>You haven't added any comments yet</h4>
+
+        <a href="{{ url_for('get_technologies') }}"
+            class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
+                class="material-icons right">edit</i>Pick a technology to comment on</a>
     </div>
-    {% endif %}
-    {% endblock %}
+</div>
+{% endif %}
+{% endblock %}
