Change redirect routes to profile page from editting forms

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -79,7 +79,7 @@
             <div class="card-content">
             
                     <ul>
-                        <li><b>Category:</b> {{ comment.technology_name }}</li>
+                        <li><b>Technology:</b> {{ comment.technology_name }}</li>
                         <li><b>Your comment:</b> {{ comment.technology_comment }}</li>
                         <li><b>Added by you on:</b> {{ comment.created_on }}</li>
 
