--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <header>
 
         <!-- Main navbar using Materialize.com  -->
@@ -25,14 +24,16 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
                         class="material-icons prefix">dehaze</i></a>
                 <ul class="right hide-on-med-and-down">
-                    
                     <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
+
+                    <!--Only show these links to logged in users -->
                     {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
                     <li><a href="{{ url_for('manage_categories') }}">Manage Categories</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
+                    
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="{{ url_for('registration') }}">Register</a></li>
                     {% endif%}
@@ -42,16 +43,15 @@
 
         <!--Collapsed navbar code from Materialize.com -->
         <ul class="sidenav" id="mobile-demo">
-            <li>
-                <h4 class="center-align">Technostalgia</h4>
-            </li>
-            
+            <li><h4 class="center-align">Technostalgia</h4></li>
             <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
+
+             <!--Only show these links to logged in users -->
             {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
-                <li><a href="{{ url_for('manage_categories') }}">Manage Categories</a></li>
-                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
+            <li><a href="{{ url_for('manage_categories') }}">Manage Categories</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
             <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="{{ url_for('registration') }}">Register</a></li>
