--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h4 class="center-align">{{ page_title }}</h4>
+<div class="row">
+  <div class="col s12">
+    <h4 class="center-align">{{ page_title }}</h4>
+  </div>
 
-<!-- Card containing technology details -->
-
-<div class="col s12 m7">
+  <!-- Card containing technology details -->
+  <div class="col s12 m8 offset-m2">
     <div class="card horizontal small hoverable">
       <div class="card-image">
         <img src="{{ technology.technology_image }}" alt="">
@@ -20,90 +22,66 @@
             <li>Worst bits: {{ technology.worst_bits }}</li>
             <li>Added by: {{ technology.added_by }}</li>
             <li>Date added: {{ technology.added_on  }}</li>
-           
           </ul>
-  
         </div>
-        <div class="card-action">
-          
-          <a href="{{ url_for('comments', technology_id=technology._id) }}">Go to the comments about {{ technology.technology_name}}</a>
-          <br>
-          {% if session.user|lower == technology.posted_by|lower %}
-          
-          <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
-            class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
-              class="material-icons right">edit</i>Edit this technology</a>
-          <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
-            href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete this technology</a>
-          {% endif %}
-        </div>
-  
+      </div>
+    </div>
+
+    <!--  modal -->
+    <div id="modal{{ technology._id }}" class="modal">
+      <div class="modal-content">
+        <h4>Are you sure you want to delete this item?</h4>
+        <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
+      </div>
+      <div class="modal-footer center-align">
+        <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
+          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to
+          delete this</a>
+        <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
+          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to safety</a>
       </div>
     </div>
   </div>
-  <!--  modal -->
-  <div id="modal{{ technology._id }}" class="modal">
-    <div class="modal-content">
-      <h4>Are you sure you want to delete this item?</h4>
-      <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
-    </div>
-    <div class="modal-footer center-align">
-      <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-        class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to
-        delete this</a>
-  
-      <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
-        class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to safety</a>
-  
-    </div>
-  </div>
+</div>
 
-
-  
-  <div class="row">
-    <div class="col s12 center-align">
-      <h3 class="heading">Add a comment about {{ technology.technology_name }}</h3>
-    </div>
+<!--  form to add a comment -->
+<div class="row">
+  <div class="col s12 center-align">
+    <h4 class="heading">Add a comment about {{ technology.technology_name }}</h4>
   </div>
-  <div class="row card-panel">
-    <form class="col s12 m8 " method="POST" action="{{ url_for('add_comment') }}">
-      
-        <div class="row">
-          <div class="input-field col s12">
-            <label for="technology_name">Technology</label>
-            <input id="technology_name" type="text" name="technology_name" value="{{ technology.technology_name }}">
-          </div>
-          <div class="row">
-            <div class="input-field col s12">
-              <i class="material-icons prefix purple-text text-darken-3">comment</i>
-             
-              <label for="technology_comment">Your comments</label>
-              <textarea id="technology_comment" name="technology_comment" minlength="10" maxlength="200"
-                class="materialize-textarea validate" required></textarea>
-            </div>
-          </div>
+</div>
+<div class="row card-panel">
+  <form class="col s12 m8 offset-m2 " method="POST" action="{{ url_for('add_comment') }}">
+    
+      <div class="input-field col s12">
+        <label for="technology_name">Technology</label>
+        <input id="technology_name" type="text" name="technology_name" value="{{ technology.technology_name }}">
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix purple-text text-darken-3">comment</i>
+          <label for="technology_comment">Your comments</label>
+          <textarea id="technology_comment" name="technology_comment" minlength="10" maxlength="200"
+            class="materialize-textarea validate" required></textarea>
         </div>
+      </div>
    
-      <!--Reset Button-->
-      <div class="row card-action center-align">
-        <div class="col s6">
-          <!--Submit Button-->
-          <button type="submit" class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons prefix">forward</i>Submit</button>
-        </div>
-        <div class="col s6">
-          <button type="reset" class="btn-large waves-effect waves-light purple lighten-1" >
-            <i
-            class="material-icons prefix">refresh</i>Clear
-          </button>
-        </div>
-        
+
+    <!--Reset Button-->
+    <div class="row card-action center-align">
+      <div class="col s6">
+        <!--Submit Button-->
+        <button type="submit" class="btn-large waves-effect waves-light purple lighten-1"><i
+            class="material-icons prefix">forward</i>Submit</button>
       </div>
-    </form>
-  </div>
-</section>
-
-  
-
+      <div class="col s6">
+        <button type="reset" class="btn-large waves-effect waves-light purple lighten-1">
+          <i class="material-icons prefix">refresh</i>Clear
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
 
 <!-- Comments section-->
 <div class="row">
@@ -112,44 +90,35 @@
   </div>
 </div>
 
-     <!--Comments on this technology--> 
-    {% for comment in comments if comment.technology_name == technology.technology_name %}
-    
-      
-
-    <div class="col s12 m6 l4">
-      <div class="card">
-        <div class="card-content ">
-          <h4 class="card-title">{{ comment.technology_name }}</h4>
-          <p>{{ comment.technology_comment }}</p>
-          <p><em>Added by: {{ comment.author|capitalize }}</em></p>
-          <p><em>Added on: {{ comment.created_on }}</em></p>
-        </div>
+<!--Comments on this technology-->
+{% for comment in comments if comment.technology_name == technology.technology_name %}
+<div class="row">
+  <div class="col s12 m6 l4">
+    <div class="card">
+      <div class="card-content ">
+        <h4 class="card-title">{{ comment.technology_name }}</h4>
+        <p>{{ comment.technology_comment }}</p>
+        <p><em>Added by: {{ comment.author|capitalize }}</em></p>
+        <p><em>Added on: {{ comment.created_on }}</em></p>
       </div>
     </div>
-    {% else %}
-    <!--If no comments-->
-    <div class="col s12 center-align">
-      <h3 >Noone has added a comment yet - you can be the first!</h3>
-      
-        <a href="#add_comment" class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons">add_circle_outline</i>Add the first comment</a>
-     
-    </div>
-    
-    {% endfor %}
-
-    
-  <!--Back to technologies page-->
-  <div class="row">
-    <div class="col s12 center-align">
-      <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1">Go back and browse all the technologies</a>
-    </div>
   </div>
-  
-  
-  </section>
-  
+  {% else %}
+  <!--If no comments-->
+  <div class="col s12 center-align">
+    <h3>Noone has added a comment yet - you can be the first!</h3>
+    <a href="#add_comment" class="btn-large waves-effect waves-light purple lighten-1"><i
+        class="material-icons">add_circle_outline</i>Add the first comment</a>
+  </div>
+</div>
+{% endfor %}
 
-
-
+<!--Back to technologies page-->
+<div class="row">
+  <div class="col s12 center-align">
+    <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1">Go back and
+      browse all the technologies</a>
+  </div>
+</div>
+</section>
 {% endblock %}
