--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h4 class="center-align">Edit your comment on {{ comment.technology_name}}</h4>
-
-<!-- Code for form from Materialize.com -->
 <div class="row">
+    <div class="row">
+        <h4 class="center-align">Edit your comment on {{ comment.technology_name}}</h4>
+    </div>
+    <!-- Code for form from Materialize.com -->
     <form class="col s12" method="POST" action="{{ url_for('edit_comment', comment_id=comment._id) }}">
         <div class="card-panel">
 
@@ -18,7 +18,6 @@
                 </div>
             </div>
 
-                        
             <!-- Input for editing a comment's content -->
             <div class="row">
                 <div class="input-field col s12">
@@ -30,10 +29,6 @@
                 </div>
             </div>
 
-            
-
-           
-
             <!-- Submit button for editting a comment  -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
@@ -41,15 +36,13 @@
                         Edit this comment<i class="material-icons right">edit</i>
                     </button>
                     <!-- Button to cancel all changes and return to technologies -->
-                    <a href="{{ url_for('get_technologies') }}"
+                    <a href="{{ url_for('profile', username=session["user"]) }}"
                         class="btn-large waves-effect waves-light purple lighten-1">
                         Cancel Changes <i class="material-icons right">close</i>
                     </a>
-
                 </div>
             </div>
         </div>
     </form>
 </div>
-
 {% endblock %}
