--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h4 class="center-align">Log In</h4>
-
 <div class="row">
+    <div class="col s12">
+        <h4 class="center-align">{{ page_title }}</h4>
+    </div>
+
+    <!-- Form for logging in -->
     <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
         <div class="card-panel">
 
@@ -36,16 +39,10 @@
                     <div class="col s12 ">
                         <p>If you have not yet joined us you can <a href="{{ url_for('registration') }}"
                                 class="purple-text text-darken-4">Register Here</a></p>
-
                     </div>
-
                 </div>
-
             </div>
         </div>
     </form>
 </div>
-
-
-
 {% endblock %}
