--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -1,34 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="row">
+  <div class="col s12">
+    <h4 class="center-align">{{ page_title }}</h4>
 
-<h4 class="center-align">{{ page_title }}</h4>
+    <!-- Code for collapsible from  Materialise.com -->
+    <ul class="collapsible">
+      {% for category in categories %}
+      <li>
+        <div class="collapsible-header purple lighten-5"><i class="material-icons">list</i>{{ category.category_name }}
+        </div>
+        <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}"
+              class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons right">close</i>Edit
+              this
+              category name</a>
+            <a href="{{ url_for('add_technology') }}" class="btn-large waves-effect waves-light purple lighten-1"><i
+                class="material-icons right">close</i>Add a technology</a></span>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
 
-<ul class="collapsible">
-  {% for category in categories %}
-                        
-                       
-    <li>
-      <div class="collapsible-header purple lighten-5"><i class="material-icons">list</i>{{ category.category_name }}</div>
-      <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons right">close</i>Edit this category name</a>
-        <a href="{{ url_for('add_technology') }}" class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons right">close</i>Add a technology</a></span>
-      </div>
-    </li>
-  
-    {% endfor %}
-    
-  </ul>
-
-  <div class="row">
-    <div class="col s12 center-align">
+    <!-- Button to add a category -->
+    <div class="row">
+      <div class="col s12 center-align">
         <a href="{{ url_for('add_category') }}" class="btn-large waves-effect waves-light purple lighten-1">
-            Add a new category to Technostalgia<i class="material-icons right">add_circle_outline</i>
+          Add a new category to Technostalgia<i class="material-icons right">add_circle_outline</i>
         </a>
-        
+      </div>
     </div>
+  </div>
 </div>
-
-
-
 {% endblock %}
-
-
