--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,6 +7,7 @@
             <h3 class="center-align">
                 {{ username|capitalize }}'s Profile
             </h3>
+            
         </div>
     </div>
 </div>
@@ -24,11 +25,9 @@
                         <li><b>Category:</b>{{ technology.category_name }}</li>
                         <li><b>Name:</b> {{ technology.technology_name }}</li>
                         <li><b>Added by you on :</b> {{ technology.added_on }}</li>
-
                     </ul>
                 </div>
                 <div class="card-action purple lighten-5">
-
                     <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
                         class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
                             class="material-icons right">edit</i>Edit this technology</a>
@@ -42,9 +41,7 @@
         <div id="modal{{ technology._id }}" class="modal">
             <div class="modal-content purple lighten-5">
                 <h4>Are you sure you want to delete this item?</h4>
-                <p>The entire entry and all its comments will be deleted and you will not be able to retrieve
-                    them
-                </p>
+                <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
             </div>
             <div class="modal-footer center-align purple lighten-5">
                 <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
@@ -76,26 +73,26 @@
         {% for comment in comments %}
         <div class="card horizontal">
             <div class="card-stacked">
-            <div class="card-content">
-            
+                <div class="card-content">
+
                     <ul>
                         <li><b>Technology:</b> {{ comment.technology_name }}</li>
                         <li><b>Your comment:</b> {{ comment.technology_comment }}</li>
                         <li><b>Added by you on:</b> {{ comment.created_on }}</li>
 
                     </ul>
-                
+
+                </div>
+                <div class="card-action purple lighten-5">
+                    <a href="{{ url_for('edit_comment', comment_id=comment._id) }}"
+                        class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
+                            class="material-icons right">edit</i>Edit this comment</a>
+                    <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
+                        href="#modal{{ comment._id }}"><i class="material-icons right">close</i>Delete
+                        this
+                        comment</a>
+                </div>
             </div>
-            <div class="card-action purple lighten-5">
-                <a href="{{ url_for('edit_comment', comment_id=comment._id) }}"
-                    class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
-                        class="material-icons right">edit</i>Edit this comment</a>
-                <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
-                    href="#modal{{ comment._id }}"><i class="material-icons right">close</i>Delete
-                    this
-                    comment</a>
-            </div>
-        </div>
         </div>
         <!--  Delete comment modal -->
         <div id="modal{{ comment._id }}" class="modal">
@@ -103,7 +100,7 @@
                 <h4>Are you sure you want to delete this comment?</h4>
                 <p>It will not be permanenetly deleted and you will not be able to retrieve it</p>
             </div>
-            <div class="modal-footer center-align">
+            <div class="modal-footer center-align purple lighten-5">
                 <a href="{{ url_for('delete_comment', comment_id=comment._id) }}"
                     class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am
                     certain
