--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -14,12 +14,35 @@
               class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons right">close</i>Edit
               this
               category name</a>
-            <a href="{{ url_for('add_technology') }}" class="btn-large waves-effect waves-light purple lighten-1"><i
-                class="material-icons right">close</i>Add a technology</a></span>
+            <a href="#modal{{ category._id }}"" class="btn-large waves-effect waves-light purple lighten-1 modal-trigger"><i
+                class="material-icons right">close</i>Delete this category</a></span>
         </div>
       </li>
+      <!--  Delete category modal -->
+<div id="modal{{ category._id }}"" class="modal">
+  <div class="modal-content red">
+      <h4>Are you sure you want to delete this entire category?</h4>
+      <p>The category, all its technologies and associated comments will be deleted and you will not be able to retrieve them</p>
+  </div>
+  <div class="modal-footer center-align">
+      <a href="{{ url_for('delete_category', category_id=category._id) }}"
+          class="modal-close waves-effect waves-light btn-small red align-right">Yes I am
+          certain
+          I
+          want to
+          delete this entire category</a>
+      <a href="{{ url_for('manage_categories') }}"
+          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No,
+          return to
+          safety</a>
+  </div>
+</div>
+
       {% endfor %}
     </ul>
+
+
+    
 
     <!-- Button to add a category -->
     <div class="row">
