--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -28,7 +28,7 @@
 <div class="row">
   <div class="col s12 m8">
 
-    <!-- Code from Materialize.com for radiobuttons to select category to browse -->
+    <!-- Code from Materialize.com for dropdown to select category to browse -->
     <select id="category_search" name="category_search" class="validate">
       <option value="" disabled selected>Choose a category to browse</option>
       <option value="all">View all</option>
@@ -57,6 +57,7 @@
 
 <!-- Code from Materialize.com for cards -->
 {% for technology in technologies %}
+
 <div class="col s12 m7">
   <div class="card horizontal medium hoverable">
     <div class="card-image">
