--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,6 +34,8 @@
                     <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
                         href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete
                         this technology</a>
+                    <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
+                        href="{{ url_for('comments', technology_id=technology._id) }}"><i class="material-icons right">close</i>Add a comment</a>
                 </div>
             </div>
         </div>
