--- a/templates/base.html
+++ b/templates/base.html
@@ -30,15 +30,15 @@
                     {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
-                    
+                    {% if session.is_admin == True %}
                     <li><a href="{{ url_for('manage_categories') }}">Manage Categories</a></li>
-                    
+                    {% endif %}
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
 
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="{{ url_for('registration') }}">Register</a></li>
-                    {% endif%}
+                    {% endif %}
                 </ul>
             </div>
         </nav>
